--- a/templates/answers/index.html
+++ b/templates/answers/index.html
@@ -2,41 +2,84 @@
 
 {% block content %}
 <style>
-  /* Estilos para que parezca una tabla */
-  section {
-      display: flex;
-      flex-direction: column;
-  }
-  ul {
-      list-style: none;
-      padding: 0;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: no-wrap;
-      overflow-x: auto;
-      border: 2px solid #ededed;
-  }
-  li {
-      border: 1px solid #ccc;
-      padding: 15px;
-  }
-  h1 {
-      margin-bottom: 10px;
-      font-size: 26px;
-      color: #333;
-  }
+    .container-flex {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap:32px;
+        padding: 1.5rem;
+    }
+    .w-full {
+        width: 100%;
+    }
+    .title {
+        text-align: center;
+        font-size: 2rem;
+        color: #636b6f;
+        font-weight: 600;
+        padding: 1rem;
+    }
+    .answers-list {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        border-collapse: collapse;
+    }
+    
+    .answers-list .header-row, .answers-list li {
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+    
+    .answers-list .header-row {
+        background-color: #f2f2f2;
+    }
+    
+    .answers-list li.odd {
+        background-color: #f9f9f9;
+    }
+    
+    .answers-list li.even {
+        background-color: #e6e6e6;
+    }
+    
+    .answers-list li > div {
+        flex: 1;
+        text-align: left;
+        padding: 8px;
+        border-left: 1px solid #ddd;
+    }
+    
+    .answers-list li > div:first-child {
+        border-left: none;
+    }
 </style>
-
-<h1>Total Respuestas: {{ total_responses }}</h1>
-<section>
-    <ul>
-        {% for answer in answers %}
-            <li>
-                <p><strong>ID:</strong> {{ answer["_id"] }}</p>
-                <p><strong>Descripción:</strong> {{ answer["description"] }}</p>
-                <!-- Agregar más campos aquí -->
-            </li>
-        {% endfor %}
-    </ul>
-</section>
+<div class="w-full container-flex">
+    <h1 class="w-full title">Total Respuestas {{ total }}</h1>
+    <h1 class="w-full title">Respuestas con conmentario: {{ total_custom }}</h1>
+</div>
+<ul class="answers-list">
+    <li class="header-row">
+        <div>Answer Date</div>
+        <div>Custom Field</div>
+        <div>Description</div>
+        <div>Score</div>
+        <div>Source</div>
+    </li>
+    {% for answer in answers %}
+    <li class="{% if loop.index is odd %}odd{% else %}even{% endif %}">
+        <div>{{ answer.answer_date }}</div>
+        <div>{{ answer.custom_field }}</div>
+        <div>{{ answer.description }}</div>
+        <div>{{ answer.score }}</div>
+        <div>{{ answer.source }}</div>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
+
+
