publish frequently words

--- a/templates/answers/index.html
+++ b/templates/answers/index.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <style>
+
+        #get_word_frequencies {
+            display: block;
+        }
+    
     .container-flex {
         display: flex;
         flex-direction: row;
